css/style-one.css
/* ... */
@media (max-width:575px) {
    .educational-environment .environment-content p {
        font-size: 1rem;
    }

}

.environment-carousel .owl-dots,
.perfect-education-carousel .owl-dots {
    display: none;
}

.environment-carousel .owl-prev,
.environment-carousel .owl-next,
.perfect-education-carousel .owl-prev,
.perfect-education-carousel .owl-next {
    width: 54px;
    height: 54px;
    background-color: rgba(94, 146, 66, .5) !important;
    color: #fff !important;
    border-radius: 10px !important;
    transition: .3s all ease;
}

.environment-carousel .owl-prev:hover,
.environment-carousel .owl-next:hover,
.perfect-education-carousel .owl-prev:hover,
.perfect-education-carousel .owl-next:hover {
    background-color: rgba(239, 207, 4, .5) !important;
}

@media (max-width:575px) {


    .environment-carousel .owl-prev,
    .environment-carousel .owl-next,
    .perfect-education-carousel .owl-prev,
    .perfect-education-carousel .owl-next {
        width: 45px;
        height: 45px;
    }
}

@media (max-width:1200px) {

    .environment-carousel .owl-prev,
    .environment-carousel .owl-next,
    .perfect-education-carousel .owl-prev,
    .perfect-education-carousel .owl-next {
        width: 45px;
        height: 45px;

    }

}

.environment-carousel .owl-prev span,
.environment-carousel .owl-next span,

.perfect-education-carousel .owl-prev span,
.perfect-education-carousel .owl-next span {
    font-size: 25px;
    line-height: 12px;
}

.owl-carousel .owl-dots.disabled,
.owl-carousel .owl-nav.disabled {
    display: block;
}

.educational-environment.v1 .owl-theme .owl-nav {
    position: absolute;
    left: 16rem !important;
    transform: rotate(90deg);
    z-index: 999999;
    bottom: 3rem
}

@media (max-width:1900px) {
    .educational-environment.v1 .owl-theme .owl-nav {
        left: 14rem !important;
    }

}

@media (max-width:1750px) {
    .educational-environment.v1 .owl-theme .owl-nav {
        left: 20% !important
    }

}

@media (max-width:1400px) {
    .educational-environment.v1 .owl-theme .owl-nav {
        left: 18% !important
    }

}

@media (max-width:1200px) {
    .educational-environment.v1 .owl-theme .owl-nav {

        left: 4rem !important;
        bottom: 2rem;
    }
}

@media (max-width:575px) {
    .educational-environment.v1 .owl-theme .owl-nav {

        left: 1.8rem !important;
        bottom: 2rem;
    }
}






@media (max-width:991px) {
    .educational-environment:last-of-type {
        margin-top: 3rem;
    }


}

.educational-environment.v2 .environment-content {
    padding-inline-start: 2rem;
    padding-inline-end: 6rem;



}

@media (max-width:768px) {
    .educational-environment.v2 .environment-content {
        padding-inline-start: 0;
        padding-inline-end: 0;
    }

}


.educational-environment.v2 .owl-theme .owl-nav {
    position: absolute;
    right: 16rem !important;
    transform: rotate(90deg);
    z-index: 999999;
    bottom: 3rem
}

@media (max-width:1900px) {
    .educational-environment.v2 .owl-theme .owl-nav {
        right: 14rem !important;
    }

}

@media (max-width:1750px) {
    .educational-environment.v2 .owl-theme .owl-nav {
        right: 20% !important
    }

}

@media (max-width:1400px) {
    .educational-environment.v2 .owl-theme .owl-nav {
        right: 18% !important
    }

}

@media (max-width:1200px) {
    .educational-environment.v2 .owl-theme .owl-nav {

        right: 4rem !important;
        bottom: 2rem;
    }
}

@media (max-width:575px) {
    .educational-environment.v2 .owl-theme .owl-nav {

        right: 1.8rem !important;
        bottom: 2rem;
    }
}







/* start college tour styles */


.college-tour {
    padding: 80px 8rem;


}

@media (max-width:1500px) {
    .college-tour {
        padding: 100px 2rem;
    }
}

@media (max-width:575px) {
    .college-tour {
        padding: 16px 1rem;
    }
}

.college-tour-layer {
    top: 25rem;
    width: 61%;


}

@media (max-width:1400px) {
    .college-tour-layer {
        display: none;
    }

}

.college-tour-layer img {
    width: 100%;
    opacity: .6;
}

.college-tour .environment-content {
    padding-inline-start: 8rem;




}


@media (max-width:1500px) {
    .college-tour .environment-content {
        padding-inline-start: 2rem;
        padding-top: 0 !important;
    }


}

@media (max-width:768px) {
    .college-tour .environment-content {
        padding-inline-start: 0;

    }
}

.college-tour .college-tour-content h2 {
    color: var(--main-color);
    font-weight: 900;
    font-size: 3em;


}

@media (max-width:991px) {
    .college-tour .college-tour-content h2 {
        font-size: 2em;
    }

}

.college-tour .college-tour-content h2:last-of-type {
    position: relative;


}

.college-tour .college-tour-content h2:last-of-type::before {

    content: '';
    position: absolute;
    height: 6px;
    width: 91px;
    background: var(--secondary);
    top: 60px;



}

@media (max-width:991px) {
    .college-tour .college-tour-content h2:last-of-type::before {
        display: none;
    }

}

.college-tour .college-tour-content p {
    font-size: 1.1rem;
    font-weight: 500;
    line-height: 2em;


}

@media (max-width:1500px) {

    .college-tour .college-tour-content p {
        line-height: 20px;
    }
}

@media (max-width:575px) {
    .college-tour .college-tour-content p {
        font-size: 1rem;
    }

}

.college-tour-content .btn,
.college-tour-image .btn {
    background-color: var(--secondary);
    padding-left: 1rem;
    padding-right: 1em;
    border-radius: 30px;
    font-size: 18px;
}

.college-tour-content .btn:hover,
.college-tour-image .btn:hover {
    background-color: var(--main-color);
    color: #fff;
}

.college-tour-content .icon {
    transform: rotate(-45deg);
}

/* start our new programs styles  */
.our-new-programs {
    background-color: #efefef;
}

.our-new-programs-wrapper {
    width: 65%;
    margin: auto;


}
/* ... */

